terraform/alb.tf

#resource "aws_lb" "web_app_alb" {
#  name               = "web-app-alb"
#  load_balancer_type = "application"
#  subnets            = [aws_subnet.public_subnet.id]
#  security_groups    = [aws_security_group.alb_sg.id]
#
#  tags = {
#    Name = "web-app-alb"
#  }
#}
#
#resource "aws_lb_target_group" "web_app_tg" {
#  name     = "web-app-tg"
#  port     = 80
#  protocol = "HTTP"
#  vpc_id   = aws_vpc.main.id

#  health_check {
#    path                = "/"
#    protocol            = "HTTP"
#    matcher             = "200-399"
#    interval            = 30
#    timeout             = 5
#    unhealthy_threshold = 2
#    healthy_threshold   = 5
#  }

#  tags = {
#    Name = "web-app-tg"
#  }
#}

#resource "aws_lb_target_group_attachment" "web_app_attachment" {
#  target_group_arn = aws_lb_target_group.web_app_tg.arn
#  target_id        = aws_instance.monitoring_instance.id
#  port             = 80
#}

#resource "aws_lb_listener" "http_listener" {
#  load_balancer_arn = aws_lb.web_app_alb.arn
#  port              = "80"
#  protocol          = "HTTP"

#  default_action {
#    type             = "forward"
#    target_group_arn = aws_lb_target_group.web_app_tg.arn
#  }
#}
